# esp-crystal-lamp

./: Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
.zed/: settings.json
schematic/: schematic.kicad_sch
src/: main.rs
