[package]
name = "crystal_lamp"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-alloc = { version = "0.7.0", default-features = false }
esp-backtrace = { version = "0.15.1", default-features = false, features = [
    "println",
    "esp32c3",
    "panic-handler",
] }
esp-hal = { version = "0.23.1", default-features = false, features = [
    "esp32c3",
] }
esp-println = { version = "0.13.1", default-features = false, features = [
    "esp32c3",
    "jtag-serial",
] }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
lto = 'fat'
overflow-checks = false

[profile.release]
codegen-units = 1
incremental = false
opt-level = 3
lto = 'fat'
overflow-checks = false
